[gd_scene load_steps=10 format=2]

[ext_resource path="res://Data/UI/styles/complete_menu.theme" type="Theme" id=1]
[ext_resource path="res://Data/Fonts/FontIngame.tres" type="DynamicFont" id=2]
[ext_resource path="res://Data/UI/styles/button_left_focus.tres" type="StyleBox" id=3]
[ext_resource path="res://Data/UI/styles/button_left_disabled.tres" type="StyleBox" id=4]
[ext_resource path="res://Data/UI/styles/button_left_pressed.tres" type="StyleBox" id=5]
[ext_resource path="res://Data/UI/styles/button_left_hover.tres" type="StyleBox" id=6]
[ext_resource path="res://Data/UI/styles/button_left_normal.tres" type="StyleBox" id=7]
[ext_resource path="res://Data/UI/styles/panel_section.tres" type="StyleBox" id=8]
[ext_resource path="res://Data/UI/play_menu.gd" type="Script" id=10]

[node name="PlayMenu" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="V" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Breadcrumb" type="Label" parent="V"]
margin_right = 760.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 2 )
text = "Hainfurt > Standart - Scenario > S1: Hainfurt - Buchenhain > 12:30:00"
clip_text = true

[node name="Tracks" type="VBoxContainer" parent="V"]
margin_top = 34.0
margin_right = 760.0
margin_bottom = 560.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="H" type="HBoxContainer" parent="V/Tracks"]
margin_right = 760.0
margin_bottom = 473.0
size_flags_vertical = 3

[node name="ItemList" type="ItemList" parent="V/Tracks/H"]
margin_right = 760.0
margin_bottom = 473.0
size_flags_horizontal = 3
size_flags_vertical = 3
items = [ "Hainfurt", null, false, "Nuremberg", null, false ]

[node name="Information" type="Panel" parent="V/Tracks/H"]
visible = false
margin_left = 460.0
margin_right = 760.0
margin_bottom = 473.0
rect_min_size = Vector2( 300, 0 )
custom_styles/panel = ExtResource( 8 )

[node name="V" type="VBoxContainer" parent="V/Tracks/H/Information"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Image" type="TextureRect" parent="V/Tracks/H/Information/V"]
margin_right = 280.0
margin_bottom = 158.0
rect_min_size = Vector2( 280, 158 )
expand = true

[node name="RichTextLabel" type="RichTextLabel" parent="V/Tracks/H/Information/V"]
margin_top = 162.0
margin_right = 280.0
margin_bottom = 453.0
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="V/Tracks"]
margin_top = 477.0
margin_right = 760.0
margin_bottom = 526.0

[node name="Back" type="Button" parent="V/Tracks/HBoxContainer"]
margin_right = 378.0
margin_bottom = 49.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 7 )
text = "BACK"

[node name="Select" type="Button" parent="V/Tracks/HBoxContainer"]
margin_left = 382.0
margin_right = 760.0
margin_bottom = 49.0
size_flags_horizontal = 3
text = "SELECT"

[node name="Scenarios" type="VBoxContainer" parent="V"]
visible = false
margin_top = 34.0
margin_right = 760.0
margin_bottom = 295.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="V/Scenarios"]
margin_right = 760.0
margin_bottom = 208.0
size_flags_vertical = 3
items = [ "Scenario 1", null, false, "Scenario 2", null, false ]

[node name="HBoxContainer" type="HBoxContainer" parent="V/Scenarios"]
margin_top = 212.0
margin_right = 760.0
margin_bottom = 261.0

[node name="Back" type="Button" parent="V/Scenarios/HBoxContainer"]
margin_right = 378.0
margin_bottom = 49.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 7 )
text = "BACK"

[node name="Select" type="Button" parent="V/Scenarios/HBoxContainer"]
margin_left = 382.0
margin_right = 760.0
margin_bottom = 49.0
size_flags_horizontal = 3
text = "SELECT"

[node name="Routes" type="VBoxContainer" parent="V"]
visible = false
margin_top = 34.0
margin_right = 760.0
margin_bottom = 560.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="V/Routes"]
margin_right = 760.0
margin_bottom = 473.0
size_flags_vertical = 3
items = [ "Hainfurt", null, false, "Nuremberg", null, false ]

[node name="HBoxContainer" type="HBoxContainer" parent="V/Routes"]
margin_top = 477.0
margin_right = 760.0
margin_bottom = 526.0

[node name="Back" type="Button" parent="V/Routes/HBoxContainer"]
margin_right = 378.0
margin_bottom = 49.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 7 )
text = "BACK"

[node name="Select" type="Button" parent="V/Routes/HBoxContainer"]
margin_left = 382.0
margin_right = 760.0
margin_bottom = 49.0
size_flags_horizontal = 3
text = "SELECT"

[node name="Times" type="VBoxContainer" parent="V"]
visible = false
margin_top = 34.0
margin_right = 760.0
margin_bottom = 560.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="V/Times"]
margin_right = 760.0
margin_bottom = 473.0
size_flags_vertical = 3
items = [ "Hainfurt", null, false, "Nuremberg", null, false ]

[node name="HBoxContainer" type="HBoxContainer" parent="V/Times"]
margin_top = 477.0
margin_right = 760.0
margin_bottom = 526.0

[node name="Back" type="Button" parent="V/Times/HBoxContainer"]
margin_right = 378.0
margin_bottom = 49.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 7 )
text = "BACK"

[node name="Select" type="Button" parent="V/Times/HBoxContainer"]
margin_left = 382.0
margin_right = 760.0
margin_bottom = 49.0
size_flags_horizontal = 3
text = "SELECT"

[node name="Trains" type="VBoxContainer" parent="V"]
visible = false
margin_top = 34.0
margin_right = 760.0
margin_bottom = 560.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="H" type="HBoxContainer" parent="V/Trains"]
margin_right = 760.0
margin_bottom = 473.0
size_flags_vertical = 3

[node name="ItemList" type="ItemList" parent="V/Trains/H"]
margin_right = 456.0
margin_bottom = 473.0
size_flags_horizontal = 3
size_flags_vertical = 3
items = [ "Hainfurt", null, false, "Nuremberg", null, false ]

[node name="V" type="VBoxContainer" parent="V/Trains/H"]
margin_left = 460.0
margin_right = 760.0
margin_bottom = 473.0

[node name="Information" type="Panel" parent="V/Trains/H/V"]
visible = false
margin_right = 300.0
margin_bottom = 369.0
rect_min_size = Vector2( 300, 0 )
size_flags_vertical = 3
custom_styles/panel = ExtResource( 8 )

[node name="V" type="VBoxContainer" parent="V/Trains/H/V/Information"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Image" type="TextureRect" parent="V/Trains/H/V/Information/V"]
margin_right = 280.0
margin_bottom = 158.0
rect_min_size = Vector2( 280, 158 )
expand = true

[node name="RichTextLabel" type="RichTextLabel" parent="V/Trains/H/V/Information/V"]
margin_top = 162.0
margin_right = 280.0
margin_bottom = 349.0
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EasyMode" type="Panel" parent="V/Trains/H/V"]
visible = false
margin_top = 373.0
margin_right = 300.0
margin_bottom = 473.0
rect_min_size = Vector2( 0, 100 )
custom_styles/panel = ExtResource( 8 )

[node name="CheckButton" type="CheckButton" parent="V/Trains/H/V/EasyMode"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.5
margin_top = -16.0
margin_right = 104.5
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
pressed = true
text = "MENU_EASY_MODE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="V/Trains"]
margin_top = 477.0
margin_right = 760.0
margin_bottom = 526.0

[node name="Back" type="Button" parent="V/Trains/HBoxContainer"]
margin_right = 378.0
margin_bottom = 49.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 7 )
text = "BACK"

[node name="Play" type="Button" parent="V/Trains/HBoxContainer"]
margin_left = 382.0
margin_right = 760.0
margin_bottom = 49.0
size_flags_horizontal = 3
text = "PLAY"

[connection signal="item_activated" from="V/Tracks/H/ItemList" to="." method="_on_Tracks_item_activated"]
[connection signal="item_selected" from="V/Tracks/H/ItemList" to="." method="_on_Trackst_item_selected"]
[connection signal="pressed" from="V/Tracks/HBoxContainer/Back" to="." method="_on_Tracks_Back_pressed"]
[connection signal="pressed" from="V/Tracks/HBoxContainer/Select" to="." method="_on_Tracks_Select_pressed"]
[connection signal="item_activated" from="V/Scenarios/ItemList" to="." method="_on_Scenarios_item_activated"]
[connection signal="pressed" from="V/Scenarios/HBoxContainer/Back" to="." method="_on_Scenarios_Back_pressed"]
[connection signal="pressed" from="V/Scenarios/HBoxContainer/Select" to="." method="_on_Scenarios_Select_pressed"]
[connection signal="item_activated" from="V/Routes/ItemList" to="." method="_on_Routes_ItemList_item_activated"]
[connection signal="pressed" from="V/Routes/HBoxContainer/Back" to="." method="_on_Routes_Back_pressed"]
[connection signal="pressed" from="V/Routes/HBoxContainer/Select" to="." method="_on_Routes_Select_pressed"]
[connection signal="item_activated" from="V/Times/ItemList" to="." method="_on_Times_ItemList_item_activated"]
[connection signal="pressed" from="V/Times/HBoxContainer/Back" to="." method="_on_Times_Back_pressed"]
[connection signal="pressed" from="V/Times/HBoxContainer/Select" to="." method="_on_Times_Select_pressed"]
[connection signal="item_activated" from="V/Trains/H/ItemList" to="." method="_on_Trains_item_activated"]
[connection signal="item_selected" from="V/Trains/H/ItemList" to="." method="_on_Trains_item_selected"]
[connection signal="pressed" from="V/Trains/HBoxContainer/Back" to="." method="_on_Trains_Back_pressed"]
[connection signal="pressed" from="V/Trains/HBoxContainer/Play" to="." method="_on_Trains_Play_pressed"]
